# bishop

./: .gitignore  .luacheckrc  .luarc.json  Cargo.toml  README.md
.github/workflows/: lua-check.yml  unit-test.yml
bishop/src/: lib.rs
bishop/src/input/: mod.rs  mouse.rs
bishop/src/time/: mod.rs
bishop/src/types/: color.rs
docs/: THEME_REFERENCE.md  getting-started.md  releases.md
ecs_component/: Cargo.toml
ecs_component/src/: lib.rs
editor/: Cargo.toml  Makefile.toml  build.rs
editor/src/: editor_global.rs  lib.rs  main.rs  test_utils.rs
engine_core/: Cargo.toml
engine_core/src/: constants.rs  engine_global.rs  lib.rs
game/: Cargo.toml
game/src/: constants.rs  game_global.rs  lib.rs  lib_playtest.rs  main.rs  playtest_main.rs
games/Demo/: .luacheckrc  .luarc.json  prefab_palette.ron
lua_api_gen/: Cargo.toml
lua_api_gen/src/: main.rs  menus_lua.rs
scripts/: setup_macos.sh
widgets/: Cargo.toml
widgets/src/: constants.rs  helpers.rs  lib.rs  state.rs
widgets/src/theme/: mappings.rs  mod.rs  visuals.rs  widget_theme.rs
widgets/src/widgets/: button.rs  checkbox.rs  color_input.rs  dropdown.rs  input_commit.rs  mod.rs  number_input.rs  slider.rs  stepper.rs  test_support.rs  text_input.rs  widget.rs
widgets/src/widgets/button/: mod.rs  tests.rs
widgets/src/widgets/context_menu/: mod.rs  state.rs  tests.rs
widgets/src/widgets/dropdown/: mod.rs  tests.rs
widgets/src/widgets/label/: mod.rs
widgets/src/widgets/panel/: mod.rs
widgets/src/widgets/scrollable_area/: mod.rs  tests.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+682 files in other folders)
