[package]
name = "widgets"
version = "0.1.0"
edition = "2024"

[features]
default = ["wgpu"]
wgpu = ["bishop/wgpu"]

[dependencies]
bishop = { path = "../bishop", default-features = false }
arboard = "3"
serde = { version = "1.0", features = ["derive"] }
ron = "0.9"
once_cell = "1"
strum = "0.26"
strum_macros = "0.26"
